# mosaic

./: .env.example  .gitignore  AGENT.md  AGENTS.md  Cargo.toml  Constraints.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  README_CN.legacy.md  README_CN.md  WORKLOG.md  package.json  planing.md  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.server.json
cli/: Cargo.toml  README.md  install.ps1  install.sh
cli/crates/mosaic-agent/: Cargo.toml
cli/crates/mosaic-agent/src/: lib.rs
cli/crates/mosaic-agents/: Cargo.toml
cli/crates/mosaic-agents/src/: lib.rs
cli/crates/mosaic-channels/: Cargo.toml
cli/crates/mosaic-channels/src/: lib.rs  policy.rs  providers.rs  repository.rs  schema.rs  types.rs
cli/crates/mosaic-cli/: Cargo.toml
cli/crates/mosaic-cli/src/: agents_command.rs  automation_commands.rs  automation_runtime.rs  browser_runtime.rs  channels_command.rs  cli_schema.rs  compat_commands.rs  core_commands.rs  devices_pairing_command.rs  diagnostics_command.rs  discovery_commands.rs  feature_commands.rs  gateway_command.rs  gateway_runtime.rs  knowledge_command.rs  main.rs  maintenance_commands.rs  mcp_command.rs  nodes_command.rs  nodes_telemetry.rs  ops_command.rs  runtime_context.rs  security_command.rs  state_records.rs  tests.rs  tts_voicecall_command.rs  tui_command.rs  utils.rs
cli/crates/mosaic-cli/tests/: agents_ops.rs  aliases_ops.rs  ask_stdin_ops.rs  browser_ops.rs  chat_repl_ops.rs  command_surface.rs  compat_ops.rs  configure_ops.rs  cron_ops.rs  docs_dns_ops.rs  e2e_flow.rs  error_codes.rs  gateway_channels.rs  help_snapshot.rs  hooks_ops.rs  json_contract.rs  json_contract_modules.rs  knowledge_ops.rs  maintenance_ops.rs  mcp_ops.rs  memory_ops.rs  models_ops.rs  nodes_devices_pairing.rs  observability_ops.rs  plugins_skills_ops.rs  policy_ops.rs  prompt_file_ops.rs  qr_clawbot_ops.rs  security_ops.rs  session_ops.rs  tts_voicecall_ops.rs  tui_interactive.rs  tui_ops.rs  webhooks_ops.rs
cli/crates/mosaic-core/: Cargo.toml
cli/crates/mosaic-core/src/: audit.rs  config.rs  error.rs  lib.rs  models.rs  privacy.rs  state.rs  (+2 more)
cli/crates/mosaic-gateway/: Cargo.toml
cli/crates/mosaic-mcp/: Cargo.toml
cli/crates/mosaic-memory/: Cargo.toml
cli/crates/mosaic-ops/: Cargo.toml
cli/crates/mosaic-plugins/: Cargo.toml
cli/crates/mosaic-provider-openai/: Cargo.toml
cli/crates/mosaic-security/: Cargo.toml
cli/crates/mosaic-tools/: Cargo.toml
cli/crates/mosaic-tui/: Cargo.toml
cli/docs/: agents.md  beta-release.md  browser.md  channels-discord.md  channels-slack.md  channels-telegram.md  channels-terminal.md  cron.md  distribution.md  gateway-ops.md  hooks.md  json-contracts.md  knowledge.md  mcp.md  memory.md  nodes-devices-pairing.md  observability.md  openclaw-parity.md  ops.md  parity-map.md  plugins-skills.md  progress.md  provider-azure-openai.md  regression-catalog.md  regression-runbook.md  release-notes-v0.2.0-beta.6.md  release-readiness.md  sandbox-approvals.md  security-audit.md  webhooks.md  worklog.md
cli/scripts/: azure_ops_playbook.sh  beta_release_check.sh  from_scratch_smoke.sh  mcp_freeze_check.sh  package_beta.sh  package_release_asset.sh  plugin_resource_soak.sh  release_install_smoke.sh  release_notes_from_worklog.sh  release_prepare.sh  release_publish_check.sh  release_tooling_smoke.sh  release_verify_archives.sh  release_verify_assets.sh  run-command.sh  run_regression_suite.sh  tutorial_regression.sh  update_distribution_manifests.sh  update_regression_catalog.sh  worklog_append.sh
cli/src/: adapter_cmd.rs  automation_cmd.rs  bootstrap.rs  gateway_cmd.rs  inspect_cmd.rs  main.rs  node_cmd.rs  output.rs  run_cmd.rs  session_cmd.rs
crates/channel-telegram/: Cargo.toml  README.md
crates/channel-telegram/src/: lib.rs
crates/channel-telegram/tests/: integration_payloads.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: doctor.rs  lib.rs  load.rs  redaction.rs  types.rs  validation.rs
crates/config/tests/: integration_load_validate.rs
crates/extension-core/: Cargo.toml  README.md
crates/extension-core/src/: builtin.rs  inventory.rs  lib.rs  loading.rs  planning.rs  validation.rs
crates/extension-core/tests/: integration_extension_set.rs
crates/gateway/: Cargo.toml  README.md
crates/gateway/src/: attachments.rs  audit.rs  auth.rs  capability.rs  command_catalog.rs  dto.rs  http.rs  ingress.rs  lib.rs  runs.rs  sandbox.rs
crates/gateway/tests/: integration_local_gateway.rs  real_telegram_ingress.rs  support.rs
crates/mcp-core/: Cargo.toml  README.md
crates/mcp-core/src/: lib.rs
crates/mcp-core/tests/: integration_manager.rs  real_stdio_mcp.rs
crates/node-protocol/: Cargo.toml  README.md
crates/node-protocol/src/: lib.rs
crates/node-protocol/tests/: integration_file_bus.rs
crates/provider/: Cargo.toml  README.md
crates/provider/src/: capabilities.rs  errors.rs  lib.rs  profile.rs  types.rs
crates/provider/tests/: integration_mock_provider.rs  real_vendors.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime/src/: attachments.rs  branches.rs  events.rs  failure.rs  lib.rs  provider.rs  routing.rs  session.rs  tools.rs  types.rs  workflow.rs
crates/runtime/tests/: integration_runtime_flow.rs
crates/sdk/: Cargo.toml  README.md
crates/sdk/src/: lib.rs
crates/sdk/tests/: integration_client_transport.rs  real_gateway_http.rs
crates/tool-core/: Cargo.toml  README.md
crates/tool-core/src/: lib.rs  metadata.rs  policy.rs  registry.rs  sources.rs  types.rs
crates/tool-core/tests/: integration_builtin_tools.rs
crates/tui/: Cargo.toml  README.md
crates/tui/src/: app.rs  app_event.rs  bottom_pane.rs  chat_widget.rs  command_popup.rs  composer.rs  diff_render.rs  highlight.rs  history_cell.rs  lib.rs  markdown.rs  mock.rs  overlays.rs  shell_view.rs  status_bar.rs  transcript.rs  ui.rs
crates/tui/tests/: integration_event_buffer.rs
server/: Cargo.toml  config.prod.yml
server/crates/common/: Cargo.toml
server/crates/domain-openapi/: Cargo.toml
server/crates/infra-openapi/: Cargo.toml
server/crates/openapi-http/: Cargo.toml
(+338 files in other folders)
