[workspace]
members = [
    "cli",
    "crates/channel-telegram",
    "crates/config",
    "crates/extension-core",
    "crates/control-protocol",
    "crates/session-core",
    "crates/scheduler-core",
    "crates/provider",
    "crates/tool-core",
    "crates/skill-core",
    "crates/mcp-core",
    "crates/inspect",
    "crates/memory",
    "crates/node-protocol",
    "crates/sandbox-core",
    "crates/runtime",
    "crates/sdk",
    "crates/workflow",
    "crates/tui",
    "crates/gateway",
]
default-members = ["cli"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
futures = "0.3"
mosaic-channel-telegram = { path = "crates/channel-telegram" }
mosaic-config = { path = "crates/config" }
mosaic-control-protocol = { path = "crates/control-protocol" }
mosaic-extension-core = { path = "crates/extension-core" }
mosaic-gateway = { path = "crates/gateway" }
mosaic-inspect = { path = "crates/inspect" }
mosaic-mcp-core = { path = "crates/mcp-core" }
mosaic-memory = { path = "crates/memory" }
mosaic-node-protocol = { path = "crates/node-protocol" }
mosaic-provider = { path = "crates/provider" }
mosaic-runtime = { path = "crates/runtime" }
mosaic-sandbox-core = { path = "crates/sandbox-core" }
mosaic-scheduler-core = { path = "crates/scheduler-core" }
mosaic-sdk = { path = "crates/sdk" }
mosaic-session-core = { path = "crates/session-core" }
mosaic-skill-core = { path = "crates/skill-core" }
mosaic-tool-core = { path = "crates/tool-core" }
mosaic-tui = { path = "crates/tui" }
mosaic-workflow = { path = "crates/workflow" }
ratatui = "0.29.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
pulldown-cmark = { version = "0.12", default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
