[package]
name = "mosaic-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mosaic"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
mosaic-tui.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

mosaic-config = { path = "../crates/config" }
mosaic-channel-telegram = { path = "../crates/channel-telegram" }
mosaic-extension-core = { path = "../crates/extension-core" }
mosaic-control-protocol = { path = "../crates/control-protocol" }
mosaic-gateway = { path = "../crates/gateway" }
mosaic-inspect = { path = "../crates/inspect" }
mosaic-memory = { path = "../crates/memory" }
mosaic-node-protocol = { path = "../crates/node-protocol" }
mosaic-mcp-core = { path = "../crates/mcp-core" }
mosaic-provider = { path = "../crates/provider" }
mosaic-runtime = { path = "../crates/runtime" }
mosaic-scheduler-core = { path = "../crates/scheduler-core" }
mosaic-sdk = { path = "../crates/sdk" }
mosaic-session-core = { path = "../crates/session-core" }
mosaic-skill-core = { path = "../crates/skill-core" }
mosaic-tool-core = { path = "../crates/tool-core" }
mosaic-workflow = { path = "../crates/workflow" }
