[package]
name = "mosaic-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mosaic"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
mosaic-tui.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

mosaic-config.workspace = true
mosaic-channel-telegram.workspace = true
mosaic-extension-core.workspace = true
mosaic-control-protocol.workspace = true
mosaic-gateway.workspace = true
mosaic-inspect.workspace = true
mosaic-memory.workspace = true
mosaic-node-protocol.workspace = true
mosaic-mcp-core.workspace = true
mosaic-provider.workspace = true
mosaic-sandbox-core.workspace = true
mosaic-runtime.workspace = true
mosaic-scheduler-core.workspace = true
mosaic-sdk.workspace = true
mosaic-session-core.workspace = true
mosaic-skill-core.workspace = true
mosaic-tool-core.workspace = true
mosaic-workflow.workspace = true

[dev-dependencies]
axum.workspace = true
