[package]
name = "mosaic-channel-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

mosaic-control-protocol.workspace = true
mosaic-inspect.workspace = true

[dev-dependencies]
axum.workspace = true
