[package]
name = "mosaic-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

mosaic-skill-core = { path = "../skill-core" }
mosaic-sandbox-core = { path = "../sandbox-core" }
mosaic-tool-core = { path = "../tool-core" }
mosaic-workflow = { path = "../workflow" }
