[package]
name = "mosaic-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

mosaic-skill-core.workspace = true
mosaic-sandbox-core.workspace = true
mosaic-tool-core.workspace = true
mosaic-workflow.workspace = true
