[package]
name = "mosaic-extension-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

mosaic-config = { path = "../config" }
mosaic-mcp-core = { path = "../mcp-core" }
mosaic-scheduler-core = { path = "../scheduler-core" }
mosaic-skill-core = { path = "../skill-core" }
mosaic-tool-core = { path = "../tool-core" }
mosaic-workflow = { path = "../workflow" }
