[package]
name = "mosaic-extension-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

mosaic-config.workspace = true
mosaic-mcp-core.workspace = true
mosaic-scheduler-core.workspace = true
mosaic-skill-core.workspace = true
mosaic-tool-core.workspace = true
mosaic-workflow.workspace = true
