[package]
name = "mosaic-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

mosaic-control-protocol = { path = "../control-protocol" }
mosaic-memory = { path = "../memory" }
mosaic-inspect = { path = "../inspect" }
mosaic-mcp-core = { path = "../mcp-core" }
mosaic-provider = { path = "../provider" }
mosaic-runtime = { path = "../runtime" }
mosaic-session-core = { path = "../session-core" }
mosaic-skill-core = { path = "../skill-core" }
mosaic-tool-core = { path = "../tool-core" }
mosaic-workflow = { path = "../workflow" }

[dev-dependencies]
mosaic-config = { path = "../config" }
reqwest.workspace = true
