[package]
name = "mosaic-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

mosaic-config.workspace = true
mosaic-channel-telegram.workspace = true
mosaic-control-protocol.workspace = true
mosaic-extension-core.workspace = true
mosaic-memory.workspace = true
mosaic-node-protocol.workspace = true
mosaic-inspect.workspace = true
mosaic-mcp-core.workspace = true
mosaic-provider.workspace = true
mosaic-sandbox-core.workspace = true
mosaic-runtime.workspace = true
mosaic-scheduler-core.workspace = true
mosaic-session-core.workspace = true
mosaic-skill-core.workspace = true
mosaic-tool-core.workspace = true
mosaic-workflow.workspace = true

[dev-dependencies]
async-trait.workspace = true
mosaic-config.workspace = true
mosaic-channel-telegram.workspace = true
reqwest.workspace = true
