[package]
name = "mosaic-mcp-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true

mosaic-tool-core.workspace = true

[dev-dependencies]
tokio.workspace = true
