[package]
name = "mosaic-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

mosaic-config.workspace = true
mosaic-inspect.workspace = true
mosaic-tool-core.workspace = true

[dev-dependencies]
axum.workspace = true
