[package]
name = "mosaic-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

mosaic-inspect = { path = "../inspect" }
mosaic-memory = { path = "../memory" }
mosaic-provider = { path = "../provider" }
mosaic-session-core = { path = "../session-core" }
mosaic-skill-core = { path = "../skill-core" }
mosaic-tool-core = { path = "../tool-core" }
mosaic-workflow = { path = "../workflow" }

[dev-dependencies]
async-trait.workspace = true
mosaic-config = { path = "../config" }
tokio.workspace = true
