[package]
name = "mosaic-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

mosaic-control-protocol = { path = "../control-protocol" }

[dev-dependencies]
axum.workspace = true
tokio.workspace = true
uuid.workspace = true

mosaic-config = { path = "../config" }
mosaic-gateway = { path = "../gateway" }
mosaic-memory = { path = "../memory" }
mosaic-provider = { path = "../provider" }
mosaic-session-core = { path = "../session-core" }
mosaic-skill-core = { path = "../skill-core" }
mosaic-tool-core = { path = "../tool-core" }
mosaic-workflow = { path = "../workflow" }
