[package]
name = "mosaic-tool-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

mosaic-scheduler-core.workspace = true
mosaic-sandbox-core.workspace = true

[dev-dependencies]
futures.workspace = true
tokio.workspace = true
