[package]
name = "mosaic-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
crossterm.workspace = true
ratatui.workspace = true
mosaic-runtime = { path = "../runtime" }
mosaic-session-core = { path = "../session-core" }
tokio.workspace = true

[dev-dependencies]
anyhow.workspace = true
