[package]
name = "mosaic-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
crossterm.workspace = true
ratatui.workspace = true
mosaic-control-protocol = { path = "../control-protocol" }
mosaic-node-protocol = { path = "../node-protocol" }
mosaic-gateway = { path = "../gateway" }
mosaic-runtime = { path = "../runtime" }
mosaic-sdk = { path = "../sdk" }
mosaic-session-core = { path = "../session-core" }
pulldown-cmark.workspace = true
tokio.workspace = true

[dev-dependencies]
anyhow.workspace = true
mosaic-inspect = { path = "../inspect" }
