[package]
name = "mosaic-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mosaic-core = { path = "../mosaic-core" }
mosaic-tools = { path = "../mosaic-tools" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
tokio.workspace = true
