[package]
name = "mosaic-channels"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mosaic-core = { path = "../mosaic-core" }
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
