[package]
name = "mosaic-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mosaic"
path = "src/main.rs"

[dependencies]
mosaic-agent = { path = "../mosaic-agent" }
mosaic-agents = { path = "../mosaic-agents" }
mosaic-channels = { path = "../mosaic-channels" }
mosaic-core = { path = "../mosaic-core" }
mosaic-gateway = { path = "../mosaic-gateway" }
mosaic-memory = { path = "../mosaic-memory" }
mosaic-ops = { path = "../mosaic-ops" }
mosaic-plugins = { path = "../mosaic-plugins" }
mosaic-provider-openai = { path = "../mosaic-provider-openai" }
mosaic-security = { path = "../mosaic-security" }
mosaic-tools = { path = "../mosaic-tools" }
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
tiny_http.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
serde_json.workspace = true
tempfile.workspace = true
