[package]
name = "mosaic-provider-openai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mosaic-core = { path = "../mosaic-core" }
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
