[package]
name = "mosaic-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mosaic-core = { path = "../mosaic-core" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
